--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!--Settings screen-->
     <string name="radius">Radius(m)</string>
     <string name="default_radius">100</string>
+    <string name="wifi_wait">Scanning Wifi networks \nPlease wait ...</string>
 </resources>
