--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="alert_message">You need to grand location permission to use App</string>
 
     <string name="permission_dialog_text">We need this permission to help you fight with zombies</string>
+    <string name="call_zombies">Call zombies</string>
 </resources>
